# fritz-rctd

./: .env.example  CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml
scripts/: build_pjproject.sh
src/: fritz_rctd.cpp
